Vorbereitung für weitere Algorithmen