@@ -44,7 +44,7 @@ class JederGegenJedenTest {
 		 * 6 Teilnehmer, jeder gegen jeden -> 5 Runden
 		 */
 		GewichtsklassenGruppe gewichtsklassenGruppe = GewichtsklassenGruppeFixture.gewichtsklassenGruppen.getFirst();
-		List<WettkampfGruppe> erstellteWettkampfgruppen = algorithmus.erstelleWettkampfGruppen(1, gewichtsklassenGruppe, 6);
+		WettkampfGruppe erstellteWettkampfgruppe = algorithmus.erstelleWettkampfGruppe(gewichtsklassenGruppe);
 		var n = gewichtsklassenGruppe.teilnehmer().size();
 
 		assertTrue(gewichtsklassenGruppe.name().isPresent());
@@ -54,57 +54,54 @@ class JederGegenJedenTest {
 		assertEquals(6, gewichtsklassenGruppe.teilnehmer().size());
 
 		// Aufteilung in Gruppen
-		assertEquals(1, erstellteWettkampfgruppen.size());
-		assertEquals("(23.8-24.5 U11)", erstellteWettkampfgruppen.getFirst().typ());
-		assertEquals("Antilope", erstellteWettkampfgruppen.getFirst().name());
+		assertEquals("(23.8-24.5 U11)", erstellteWettkampfgruppe.typ());
+		assertEquals("Antilope", erstellteWettkampfgruppe.name());
 		// Anzahl der Runden
 		var anzahlRunden = n - 1;
-		assertEquals(anzahlRunden, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().size());
+		assertEquals(anzahlRunden, erstellteWettkampfgruppe.alleRundenBegegnungen().size());
 		// Berechnung der Gesamtanzahl aller Begegnungen bei Jeder-Gegen-Jeden: N = (n * (n-1)) /2, mit n==AnzahlTeilnehmer
 		var N = (n * (n-1)) /2;
-		assertEquals(N, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().stream().mapToInt(begegnung -> begegnung.begegnungenJeRunde().size()).sum());
+		assertEquals(N, erstellteWettkampfgruppe.alleRundenBegegnungen().stream().mapToInt(begegnung -> begegnung.begegnungenJeRunde().size()).sum());
 
 		// Ausgabe des Turnierbaums
-		for (WettkampfGruppe wettkampfGruppe : erstellteWettkampfgruppen) {
-			int r = 1;
-			for (BegegnungenJeRunde begegnungenJeRunde : wettkampfGruppe.alleRundenBegegnungen()) {
-				logger.debug("Runde {}", r);
-				for (Begegnung begegnung : begegnungenJeRunde.begegnungenJeRunde()) {
-					logger.debug("{} - Wettkaempfer1: {}, Wettkaempfer2: {}", begegnung.getBegegnungId(),  begegnung.getWettkaempfer1().map(Wettkaempfer::name), begegnung.getWettkaempfer2().map(Wettkaempfer::name));
-				}
-				r++;
+		int r = 1;
+		for (BegegnungenJeRunde begegnungenJeRunde : erstellteWettkampfgruppe.alleRundenBegegnungen()) {
+			logger.debug("Runde {}", r);
+			for (Begegnung begegnung : begegnungenJeRunde.begegnungenJeRunde()) {
+				logger.debug("{} - Wettkaempfer1: {}, Wettkaempfer2: {}", begegnung.getBegegnungId(),  begegnung.getWettkaempfer1().map(Wettkaempfer::name), begegnung.getWettkaempfer2().map(Wettkaempfer::name));
 			}
+			r++;
 		}
 
 		// Runde 1
-		assertEquals(3, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().get(0).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 2), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().get(1).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 3), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().get(2).getBegegnungId());
+		assertEquals(3, erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 2), erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().get(1).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 3), erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().get(2).getBegegnungId());
 
 		// Runde 2
-		assertEquals(3, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().get(0).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 2), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().get(1).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 3), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().get(2).getBegegnungId());
+		assertEquals(3, erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 2), erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().get(1).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 3), erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().get(2).getBegegnungId());
 
 		// Runde 3
-		assertEquals(3, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().get(0).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 2), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().get(1).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 3), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().get(2).getBegegnungId());
+		assertEquals(3, erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 2), erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().get(1).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 3), erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().get(2).getBegegnungId());
 
 		// Runde 4
-		assertEquals(3, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(3).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(3).begegnungenJeRunde().get(0).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 2), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(3).begegnungenJeRunde().get(1).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 3), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(3).begegnungenJeRunde().get(2).getBegegnungId());
+		assertEquals(3, erstellteWettkampfgruppe.alleRundenBegegnungen().get(3).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(3).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 2), erstellteWettkampfgruppe.alleRundenBegegnungen().get(3).begegnungenJeRunde().get(1).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 4, 3), erstellteWettkampfgruppe.alleRundenBegegnungen().get(3).begegnungenJeRunde().get(2).getBegegnungId());
 
 		// Runde 5
-		assertEquals(3, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(4).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(4).begegnungenJeRunde().get(0).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 2), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(4).begegnungenJeRunde().get(1).getBegegnungId());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 3), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(4).begegnungenJeRunde().get(2).getBegegnungId());
+		assertEquals(3, erstellteWettkampfgruppe.alleRundenBegegnungen().get(4).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(4).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 2), erstellteWettkampfgruppe.alleRundenBegegnungen().get(4).begegnungenJeRunde().get(1).getBegegnungId());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 5, 3), erstellteWettkampfgruppe.alleRundenBegegnungen().get(4).begegnungenJeRunde().get(2).getBegegnungId());
 	}
 
 	@Test
@@ -113,7 +110,7 @@ class JederGegenJedenTest {
 		 * 3 Teilnehmer, jeder gegen jeden -> 3 Runden
 		 */
 		GewichtsklassenGruppe gewichtsklassenGruppe = GewichtsklassenGruppeFixture.gewichtsklassenGruppen.getLast();
-		List<WettkampfGruppe> erstellteWettkampfgruppen = algorithmus.erstelleWettkampfGruppen(1, gewichtsklassenGruppe, 6);
+		WettkampfGruppe erstellteWettkampfgruppe = algorithmus.erstelleWettkampfGruppe(gewichtsklassenGruppe);
 		var n = gewichtsklassenGruppe.teilnehmer().size();
 
 		assertTrue(gewichtsklassenGruppe.name().isPresent());
@@ -123,39 +120,37 @@ class JederGegenJedenTest {
 		assertEquals(3, gewichtsklassenGruppe.teilnehmer().size());
 
 		// Aufteilung in Gruppen
-		assertEquals(1, erstellteWettkampfgruppen.size());
-		assertEquals("(28.0-28.2 U11)", erstellteWettkampfgruppen.getFirst().typ());
-		assertEquals("Tiger", erstellteWettkampfgruppen.getFirst().name());
+		assertEquals("(28.0-28.2 U11)", erstellteWettkampfgruppe.typ());
+		assertEquals("Tiger", erstellteWettkampfgruppe.name());
 		// Anzahl der Runden
 		var anzahlRunden = n;
-		assertEquals(anzahlRunden, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().size());
+		assertEquals(anzahlRunden, erstellteWettkampfgruppe.alleRundenBegegnungen().size());
 		// Berechnung der Gesamtanzahl aller Begegnungen bei Jeder-Gegen-Jeden: N = (n * (n-1)) /2, mit n==AnzahlTeilnehmer
 		var N = (n * (n-1)) /2;
-		assertEquals(N, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().stream().mapToInt(begegnung -> begegnung.begegnungenJeRunde().size()).sum());
+		assertEquals(N, erstellteWettkampfgruppe.alleRundenBegegnungen().stream().mapToInt(begegnung -> begegnung.begegnungenJeRunde().size()).sum());
 
 		// Ausgabe des Turnierbaums
-		for (WettkampfGruppe wettkampfGruppe : erstellteWettkampfgruppen) {
-			int r = 1;
-			for (BegegnungenJeRunde begegnungenJeRunde : wettkampfGruppe.alleRundenBegegnungen()) {
-				logger.debug("Runde {}", r);
-				for (Begegnung begegnung : begegnungenJeRunde.begegnungenJeRunde()) {
-					logger.debug("{} - Wettkaempfer1: {}, Wettkaempfer2: {}", begegnung.getBegegnungId(),  begegnung.getWettkaempfer1().map(Wettkaempfer::name), begegnung.getWettkaempfer2().map(Wettkaempfer::name));
-				}
-				r++;
+
+		int r = 1;
+		for (BegegnungenJeRunde begegnungenJeRunde : erstellteWettkampfgruppe.alleRundenBegegnungen()) {
+			logger.debug("Runde {}", r);
+			for (Begegnung begegnung : begegnungenJeRunde.begegnungenJeRunde()) {
+				logger.debug("{} - Wettkaempfer1: {}, Wettkaempfer2: {}", begegnung.getBegegnungId(),  begegnung.getWettkaempfer1().map(Wettkaempfer::name), begegnung.getWettkaempfer2().map(Wettkaempfer::name));
 			}
+			r++;
 		}
 
 		// Runde 1
-		assertEquals(1, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(0).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(1, erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 1, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(0).begegnungenJeRunde().get(0).getBegegnungId());
 
 		// Runde 2
-		assertEquals(1, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(1).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(1, erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 2, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(1).begegnungenJeRunde().get(0).getBegegnungId());
 
 		// Runde 3
-		assertEquals(1, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().size());
-		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 1), erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().get(2).begegnungenJeRunde().get(0).getBegegnungId());
+		assertEquals(1, erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().size());
+		assertEquals(new Begegnung.BegegnungId(Begegnung.RundenTyp.GEWINNERRUNDE, 3, 1), erstellteWettkampfgruppe.alleRundenBegegnungen().get(2).begegnungenJeRunde().get(0).getBegegnungId());
 	}
 
 	@Test
@@ -163,10 +158,9 @@ class JederGegenJedenTest {
 		List<Wettkaempfer> teilnehmer = List.of(WettkaempferFixtures.wettkaempfer1.get());
 		GewichtsklassenGruppe gewichtsklassenGruppe = new GewichtsklassenGruppe(UUID.randomUUID(), Altersklasse.U11, Optional.of(Geschlecht.w), teilnehmer, Optional.of(RandoriGruppenName.Adler), 25.0, 25.0, turnierUUID);
 
-		List<WettkampfGruppe> erstellteWettkampfgruppen = algorithmus.erstelleWettkampfGruppen(1, gewichtsklassenGruppe, 6);
+		WettkampfGruppe erstellteWettkampfgruppe = algorithmus.erstelleWettkampfGruppe(gewichtsklassenGruppe);
 
-		assertEquals(1, erstellteWettkampfgruppen.size());
-		assertTrue(!erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().isEmpty());
-		assertEquals(1, erstellteWettkampfgruppen.getFirst().alleRundenBegegnungen().stream().mapToInt(b -> b.begegnungenJeRunde().size()).sum());
+		assertTrue(!erstellteWettkampfgruppe.alleRundenBegegnungen().isEmpty());
+		assertEquals(1, erstellteWettkampfgruppe.alleRundenBegegnungen().stream().mapToInt(b -> b.begegnungenJeRunde().size()).sum());
 	}
 }
